--- a/Data_preprocessing.ipynb
+++ b/Data_preprocessing.ipynb
@@ -780,6 +780,20 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "qx5hzOM5J6dX"
+   },
+   "outputs": [],
+   "source": [
+    "#Sorting the rows by rev_date , old reviews to latest reviews\n",
+    "df = df.sort_values(by = 'rev_date')"
+   ]
   }
  ],
  "metadata": {
@@ -803,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
