Added LDA and Sentiment analysis for multiple products

--- a/Topic Modelling and Sentiment Analysis/LDA_Sentiment_Single_Product_B00FLYWNYQ_Cooker.ipynb
+++ b/Topic Modelling and Sentiment Analysis/LDA_Sentiment_Single_Product_B00FLYWNYQ_Cooker.ipynb
@@ -44,9 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -473,13 +471,34 @@
        "[22704 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_B00FLYWNYQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22704"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_reviews = df_B00FLYWNYQ.reviewerID.unique()\n",
+    "len(unique_reviews)"
    ]
   },
   {
@@ -2651,9 +2670,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4014,24 +4031,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 133,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([4.646373339141799,\n",
-       "  3.8224468636599274,\n",
-       "  4.911118508655126,\n",
-       "  2.7617543859649123,\n",
-       "  3.1154125772446384,\n",
-       "  5.0],\n",
-       " [5, 4, 5, 3, 4, 5])"
+       "([0.215221620608021,\n",
+       "  0.261612531362311,\n",
+       "  0.20361960279265234,\n",
+       "  0.3620886799644264,\n",
+       "  0.3209847733504463,\n",
+       "  0.2],\n",
+       " [2, 3, 2, 5, 5, 1])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4040,15 +4055,15 @@
     "results = []\n",
     "ratings= []\n",
     "for i in range(6):\n",
-    "    value = total_sentiment.loc[i]/topic_wise_sentiment_counts[i][1]\n",
+    "    value = topic_wise_sentiment_counts[i][1]/total_sentiment.loc[i]\n",
     "    results.append(value)\n",
-    "    if (value >4):\n",
+    "    if (value >0.32):\n",
     "        ratings.append(5)\n",
-    "    elif (value >3):\n",
+    "    elif (value >0.3):\n",
     "        ratings.append(4)\n",
-    "    elif (value >2):\n",
+    "    elif (value >0.25):\n",
     "        ratings.append(3)\n",
-    "    elif (value >1):\n",
+    "    elif (value >0.2):\n",
     "        ratings.append(2)\n",
     "    else: ratings.append(1)\n",
     "results, ratings"
@@ -4070,7 +4085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
@@ -4106,37 +4121,37 @@
        "      <th>0</th>\n",
        "      <td>B00FLYWNYQ</td>\n",
        "      <td>Product Design</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>B00FLYWNYQ</td>\n",
        "      <td>What to Cook</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>B00FLYWNYQ</td>\n",
        "      <td>Product Features</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>B00FLYWNYQ</td>\n",
        "      <td>Likely Recommendation</td>\n",
-       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>B00FLYWNYQ</td>\n",
        "      <td>recommendation</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>B00FLYWNYQ</td>\n",
        "      <td>Time to cook</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4144,22 +4159,22 @@
       ],
       "text/plain": [
        "    productID                  topic  rating\n",
-       "0  B00FLYWNYQ         Product Design       5\n",
-       "1  B00FLYWNYQ           What to Cook       4\n",
-       "2  B00FLYWNYQ       Product Features       5\n",
-       "3  B00FLYWNYQ  Likely Recommendation       3\n",
-       "4  B00FLYWNYQ         recommendation       4\n",
-       "5  B00FLYWNYQ           Time to cook       5"
+       "0  B00FLYWNYQ         Product Design       2\n",
+       "1  B00FLYWNYQ           What to Cook       3\n",
+       "2  B00FLYWNYQ       Product Features       2\n",
+       "3  B00FLYWNYQ  Likely Recommendation       5\n",
+       "4  B00FLYWNYQ         recommendation       5\n",
+       "5  B00FLYWNYQ           Time to cook       1"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Product_Summary = pd.DataFrame({'productID':['B00FLYWNYQ', 'B00FLYWNYQ', 'B00FLYWNYQ', 'B00FLYWNYQ', 'B00FLYWNYQ', 'B00FLYWNYQ'],\n",
-    "                              'topic': ['Product Design', 'What to Cook', 'Product Features', 'Likely Recommendation', 'recommendation', 'Time to cook'],\n",
+    "                              'topic': ['Product Design', 'Number of food options this product is great for', 'Product Features', 'How likely are you to recommend this product', 'recommendation', 'Time to cook'],\n",
     "                               'rating': ratings})\n",
     "Product_Summary"
    ]
@@ -4173,131 +4188,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Most_positive_sentences = df_full.nlargest(5, 'sentiment_scores')['sentences']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "90     \\n\\nI'm really impressed with the quality of t...\n",
-       "94       Both dishes I tested which were  brown rice ...\n",
-       "98                            The brown rice was perfect\n",
-       "149                                            Wonderful\n",
-       "245                    Thank you for a wonderful product\n",
-       "Name: sentences, dtype: object"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 )  \n",
+      "\n",
+      "I'm really impressed with the quality of this cooker!  It feels and looks like it was very well thought out and constructed\n",
+      "1 )    Both dishes I tested which were  brown rice and Ossobuco turned out delicious\n",
+      "2 )    The brown rice was perfect\n",
+      "3 )  Wonderful\n",
+      "4 )    Thank you for a wonderful product\n"
+     ]
     }
    ],
    "source": [
-    "df_full.nlargest(5, 'sentiment_scores')['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n\\nI'm really impressed with the quality of this cooker!  It feels and looks like it was very well thought out and constructed\""
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[90]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'  Both dishes I tested which were  brown rice and Ossobuco turned out delicious'"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[94]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'  The brown rice was perfect'"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[98]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Wonderful'"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[149]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'  Thank you for a wonderful product'"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[245]['sentences']"
+    "for i in range(len(Most_positive_sentences.index)):\n",
+    "    print(i,\") \",df_full.iloc[Most_positive_sentences.index[i]]['sentences'])"
    ]
   },
   {
@@ -4309,129 +4228,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1153     Tried to make yogurt 3 times and it turned out...\n",
-       "3006       Anybody who has worked with plastic before k...\n",
-       "7640      I ended up discarding the rice pudding, it wa...\n",
-       "9565      Only reason not a 5 star\\nThe manual's cookin...\n",
-       "10951    \\nWhy? The terrible silicone ring that absorbe...\n",
-       "Name: sentences, dtype: object"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "df_full.nsmallest(5, 'sentiment_scores')['sentences']"
+    "Most_negative_sentences = df_full.nsmallest(5, 'sentiment_scores')['sentences']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Tried to make yogurt 3 times and it turned out awful, grainey and watery'"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 )  Tried to make yogurt 3 times and it turned out awful, grainey and watery\n",
+      "1 )    Anybody who has worked with plastic before knows that plastic has a nasty habit of letting things penetrate inside\n",
+      "2 )   I ended up discarding the rice pudding, it was that awful\n",
+      "3 )   Only reason not a 5 star\n",
+      "The manual's cooking times and water mix are terrible\n",
+      "4 )  \n",
+      "Why? The terrible silicone ring that absorbed food smell, and even the detergent's smell when I tried to wash it, and the mixture made me ditch the pot\n"
+     ]
     }
    ],
    "source": [
-    "df_full.iloc[1153]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'  Anybody who has worked with plastic before knows that plastic has a nasty habit of letting things penetrate inside'"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[3006]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' I ended up discarding the rice pudding, it was that awful'"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[7640]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" Only reason not a 5 star\\nThe manual's cooking times and water mix are terrible\""
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[9565]['sentences']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nWhy? The terrible silicone ring that absorbed food smell, and even the detergent's smell when I tried to wash it, and the mixture made me ditch the pot\""
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_full.iloc[10951]['sentences']"
+    "for i in range(len(Most_negative_sentences.index)):\n",
+    "    print(i,\") \",df_full.iloc[Most_negative_sentences.index[i]]['sentences'])"
    ]
   }
  ],
