--- a/LDA - Recommender/Recommendation_LDA.ipynb
+++ b/LDA - Recommender/Recommendation_LDA.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,18 +853,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load similarity pickle file\n",
-    "#with open('index.pkl', 'rb') as f:\n",
-    "   # index = pickle.load(f)"
+    "with open('index.pkl', 'rb') as f:\n",
+    "    index = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "[192603 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
        "[188138 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1346,7 @@
     "            print(prd_top[:100]+ '...')\n",
     "            print('-----')\n",
     "            item_title = df_final.title[i]\n",
-    "            print('Recommendations for :',item_title[:25] + \"...\")\n",
+    "            print('Recommendations for :',item_title[:75] + \"...\")\n",
     "            print('************************************************')\n",
     "            #To display top 5 similar items\n",
     "            top_5 = recommendation[1:6]\n",
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1372,13 +1372,13 @@
       "Your item's most prominant topic is:\n",
       "0.024*\"coffee\" + 0.012*\"bowl\" + 0.009*\"container\" + 0.007*\"drink\" + 0.007*\"cup\" + 0.007*\"food\" + 0.0...\n",
       "-----\n",
-      "Recommendations for : Rubbermaid Easy Find Lids...\n",
+      "Recommendations for : Rubbermaid Easy Find Lids Food Storage Containers, Racer Red, 42-Piece Set ...\n",
       "************************************************\n",
-      "['Bistro Demitasse Cup Set - 2 Cups and Saucers', 1.0]\n",
-      "['Classic 28 oz. Unbreakable Polycarbonate Jumbo Cooler', 0.99999994]\n",
-      "['Wine Enthusiast Steady-Temp Double Wall Beer Glasses, Set of 2', 0.99999994]\n",
-      "['Set of 4 - 16-oz Clear Glass Mason Jar Beverage Cups with Handles,  4 Clear Glass Drink Cups with Metal Lids', 0.99999994]\n",
-      "['Ninja Brand Snow Cone and Ices Maker Kit + 200 Spoon Straws', 0.99999994]\n"
+      "['Classic 28 oz. Unbreakable Polycarbonate Jumbo Cooler', 1.0]\n",
+      "['Wine Enthusiast Steady-Temp Double Wall Beer Glasses, Set of 2', 1.0]\n",
+      "['Imperial 10 Pcs Glass Nested Dipping or Storage Bowls with Black and Red Lids - 2 Pack', 1.0]\n",
+      "['Cuisinox Stainless Steel Double Walled Beer Stein', 1.0]\n",
+      "['Insulated Water Resistant Lunch Bag (Woodland Camo)', 1.0]\n"
      ]
     }
    ],
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
       "Your item's most prominant topic is:\n",
       "0.021*\"knife\" + 0.008*\"cook\" + 0.008*\"oven\" + 0.008*\"cooking\" + 0.007*\"pan\" + 0.007*\"sharp\" + 0.007*...\n",
       "-----\n",
-      "Recommendations for : Instant Pot DUO60 6 Qt 7-...\n",
+      "Recommendations for : Instant Pot DUO60 6 Qt 7-in-1 Multi-Use Programmable Pressure Cooker, Slow ...\n",
       "************************************************\n",
       "['Wolfgang Puck Gourmet Grill & Panini Press', 0.9999927]\n",
       "['Sunbeam 7530 Rocket Grill Electric Grilling Appliance, White', 0.9999747]\n",
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1426,13 +1426,13 @@
       "Your item's most prominant topic is:\n",
       "0.026*\"chair\" + 0.019*\"mattress\" + 0.015*\"comfortable\" + 0.014*\"wine\" + 0.010*\"bottle\" + 0.009*\"pill...\n",
       "-----\n",
-      "Recommendations for : ZYLISS Lock N' Lift Can O...\n",
+      "Recommendations for : ZYLISS Lock N' Lift Can Opener with Lid Lifter Magnet, White...\n",
       "************************************************\n",
-      "[\"Chef'n EzSqueeze One-Handed Can Opener (Black and Meringue)\", 0.99800944]\n",
-      "['EZ-DUZ-IT Deluxe Can Opener with Red Grips', 0.99777937]\n",
-      "['Swing-A-Way 6090 Easy Crank Can Opener, Black', 0.99773985]\n",
-      "['Resource for Cooking Stainless Steel Manual Can Opener', 0.997704]\n",
-      "['Commercial Swing-a-way Easy Crank Can Opener Heavy Duty - Ergonomic Design', 0.9974011]\n"
+      "[\"Chef'n EzSqueeze One-Handed Can Opener (Black and Meringue)\", 0.99800664]\n",
+      "['EZ-DUZ-IT Deluxe Can Opener with Red Grips', 0.9977722]\n",
+      "['Swing-A-Way 6090 Easy Crank Can Opener, Black', 0.9977405]\n",
+      "['Resource for Cooking Stainless Steel Manual Can Opener', 0.9977056]\n",
+      "['Commercial Swing-a-way Easy Crank Can Opener Heavy Duty - Ergonomic Design', 0.997403]\n"
      ]
     }
    ],
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1453,13 +1453,13 @@
       "Your item's most prominant topic is:\n",
       "0.007*\"frame\" + 0.007*\"wall\" + 0.006*\"shelf\" + 0.006*\"tree\" + 0.005*\"wood\" + 0.005*\"party\" + 0.004*\"...\n",
       "-----\n",
-      "Recommendations for : Country Living Havenbrook...\n",
+      "Recommendations for : Country Living Havenbrook Nightstand, Hazelnut...\n",
       "************************************************\n",
-      "['Giant Tubular Plastic Hanger White (6 Pack)', 0.9999999]\n",
-      "['Zuo Modern 102151 Galaxy Dining Table, Round Dining Table, Tempered Glass Top, Chromed Steel Tube Center and Base, Chrome Finish', 0.9999999]\n",
-      "['JPI DGA Marilyn Monroe Smile Now Cry Later Super Soft Queen Size Comforter w/Pillow Shams', 0.9999999]\n",
-      "['Legare 59-Inch-by-31-Inch Bookcase, Espresso', 0.9999999]\n",
-      "['Country Living Havenbrook Nightstand, Hazelnut', 0.9999999]\n"
+      "['Country Living Havenbrook Nightstand, Hazelnut', 1.0]\n",
+      "['Lipper International 520W Child\\'s Table for Play or Activity, 23.75\" x 23.75\" Square, 21.66\" Tall, White', 0.99999994]\n",
+      "['Anagram International Hot Wheels Speed City Bouquet, Multicolor', 0.9999998]\n",
+      "['Zuo Modern 102151 Galaxy Dining Table, Round Dining Table, Tempered Glass Top, Chromed Steel Tube Center and Base, Chrome Finish', 0.99999964]\n",
+      "['JPI DGA Marilyn Monroe Smile Now Cry Later Super Soft Queen Size Comforter w/Pillow Shams', 0.99999964]\n"
      ]
     }
    ],
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
       "Your item's most prominant topic is:\n",
       "0.025*\"pillow\" + 0.023*\"sheet\" + 0.014*\"vacuum\" + 0.011*\"blanket\" + 0.009*\"fabric\" + 0.009*\"towel\" +...\n",
       "-----\n",
-      "Recommendations for : Clara Clark 1800 Premier ...\n",
+      "Recommendations for : Clara Clark 1800 Premier Series 4pc Bed Sheet Set - King, Camel Gold...\n",
       "************************************************\n",
       "['Sweet Home Collection 2 Piece Reversible Polyester Microfiber Goose Down Alternative Comforter Set with Pillow Shams, Twin, Burgundy/Black', 1.0]\n",
       "['BrylaneHome Amelia Bedspread', 1.0]\n",
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1507,13 +1507,13 @@
       "Your item's most prominant topic is:\n",
       "0.015*\"candle\" + 0.013*\"clock\" + 0.012*\"unit\" + 0.011*\"smell\" + 0.011*\"filter\" + 0.009*\"battery\" + 0...\n",
       "-----\n",
-      "Recommendations for : BLACK+DECKER BDH2000PL MA...\n",
+      "Recommendations for : BLACK+DECKER BDH2000PL MAX Lithium Pivot Vacuum, 20-volt...\n",
       "************************************************\n",
-      "['BLACK+DECKER PHV1800CB 18-Volt Pivoting-Nose Cordless Handheld Vacuum Cleaner', 0.99981]\n",
-      "['Generic Hoover WindTunnel Self-Propelled, and Bagless Models HEPA Exhaust Filter, Fits Hoover Part#40110001', 0.99965554]\n",
-      "['HQRP 1500mAh Battery for Dyson DC16 Root 6 / Animal/ISSEY MIYAKE 912433-04 912433-03 exclusive Vacuum Cleaners Replacement plus HQRP Coaster', 0.99954456]\n",
-      "['Think Crucial 2 Replacements for Eureka HF8 HEPA Style Filter Fits 3600 & Mighty Mite Canisters, Compatible With Part # 60666, 60666A, 60666B & 60666-6', 0.9993624]\n",
-      "['Think Crucial 4 Replacements for Eureka DCF-21 Filter Fits Sanitaire AirSpeed Bagless, Compatible With Part # 67821, 68931 & EF91; Washable & Reusable', 0.9992909]\n"
+      "['BLACK+DECKER PHV1800CB 18-Volt Pivoting-Nose Cordless Handheld Vacuum Cleaner', 0.99981004]\n",
+      "['Generic Hoover WindTunnel Self-Propelled, and Bagless Models HEPA Exhaust Filter, Fits Hoover Part#40110001', 0.9996554]\n",
+      "['HQRP 1500mAh Battery for Dyson DC16 Root 6 / Animal/ISSEY MIYAKE 912433-04 912433-03 exclusive Vacuum Cleaners Replacement plus HQRP Coaster', 0.9995452]\n",
+      "['Think Crucial 2 Replacements for Eureka HF8 HEPA Style Filter Fits 3600 & Mighty Mite Canisters, Compatible With Part # 60666, 60666A, 60666B & 60666-6', 0.9993622]\n",
+      "['Think Crucial 4 Replacements for Eureka DCF-21 Filter Fits Sanitaire AirSpeed Bagless, Compatible With Part # 67821, 68931 & EF91; Washable & Reusable', 0.99929076]\n"
      ]
     }
    ],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1534,13 +1534,13 @@
       "Your item's most prominant topic is:\n",
       "0.026*\"curtain\" + 0.019*\"shower\" + 0.015*\"bathroom\" + 0.011*\"board\" + 0.009*\"window\" + 0.009*\"spoon\"...\n",
       "-----\n",
-      "Recommendations for : InterDesign PEVA 3 Gauge ...\n",
+      "Recommendations for : InterDesign PEVA 3 Gauge Shower Curtain Liner - Mold/Mildew Resistant, PVC ...\n",
       "************************************************\n",
-      "['LynnWang Design 72x72 Inch PVC FREE Shower Curtain or Liner,White Floral,With 12 Hooks, 100% EVA', 0.9999089]\n",
-      "['Utopia Roller Shower Curtain Rings/Hooks, 100% Stainless Steel, Polished Chrome, Set of 12 Rings (Chrome)', 0.9998976]\n",
-      "['mDesign - 2 Pack - Waterproof, Mold/Mildew Resistant, Heavy Duty PEVA Shower Curtain Liner for Bathroom Showers and Bathtubs - No Odor, Chlorine Free - 3 Gauge, 72\" x 72\" - Clear', 0.9998946]\n",
-      "['Eforcurtain Small 36 by 72-inch Cobblestone Waterproof and No More Mildew Shower Curtain Liner PVC Semi-Transparent Bath Stall Curtain Used as Stand Alone or Liner', 0.9998551]\n",
-      "['InterDesign Vinyl 4.8 Gauge Shower Liner, 72 x 72, Clear', 0.99974024]\n"
+      "['LynnWang Design 72x72 Inch PVC FREE Shower Curtain or Liner,White Floral,With 12 Hooks, 100% EVA', 0.99990857]\n",
+      "['Utopia Roller Shower Curtain Rings/Hooks, 100% Stainless Steel, Polished Chrome, Set of 12 Rings (Chrome)', 0.999898]\n",
+      "['mDesign - 2 Pack - Waterproof, Mold/Mildew Resistant, Heavy Duty PEVA Shower Curtain Liner for Bathroom Showers and Bathtubs - No Odor, Chlorine Free - 3 Gauge, 72\" x 72\" - Clear', 0.99989444]\n",
+      "['Eforcurtain Small 36 by 72-inch Cobblestone Waterproof and No More Mildew Shower Curtain Liner PVC Semi-Transparent Bath Stall Curtain Used as Stand Alone or Liner', 0.9998556]\n",
+      "['InterDesign Vinyl 4.8 Gauge Shower Liner, 72 x 72, Clear', 0.9997402]\n"
      ]
     }
    ],
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1561,23 +1561,23 @@
       "Your item's most prominant topic is:\n",
       "0.021*\"knife\" + 0.008*\"cook\" + 0.008*\"oven\" + 0.008*\"cooking\" + 0.007*\"pan\" + 0.007*\"sharp\" + 0.007*...\n",
       "-----\n",
-      "Recommendations for : Polder 307T 307 Preset Th...\n",
+      "Recommendations for : Zojirushi NHS-10 6-Cup (Uncooked) Rice Cooker...\n",
       "************************************************\n",
-      "['Best Instant Read Kitchen Thermometer - Digital Meat Thermometer Compact Accurate - Flexible Probe - Essential for All Food Meat BBQ Dairy Water Candy - Proven Cooking Thermometer - indoor outdoor use', 0.99999994]\n",
-      "['West Bend 88503 3-Qt. Fondue Pot (Discontinued by Manufacturer)', 0.99999964]\n",
-      "['D&J Lifestyle Professional Digital Meat Thermometer, Temperature Probe for Beef, Lamp, Pork, Turkey and Chicken with BBQ Recipe E-book', 0.9999989]\n",
-      "['Chefman Induction Cooktop Electric Countertop Burner - Includes Digital Control Panel / Timer and Cool Touch Technology, Black', 0.9999989]\n",
-      "['Fagor Duo Handle', 0.99999714]\n"
+      "['LiveFresh Stainless Steel Heavy Duty Fine Mesh 13\" Splatter Screen with Resting Feet and Handle Grip', 0.99999696]\n",
+      "['Zojirushi 604976-NS-LGC05XB NS-LGC05XB Micom Rice Cooker & Warmer, 11.9 x 9.1 x 7.5, Stainless Black', 0.9999936]\n",
+      "['Chef’sChoice 840 WafflePro Taste/Texture Select Waffle Maker Traditional Five of Hearts Easy to Clean Nonstick Plates Temperature Recovery with 6-Setting Color Control Dial, 5-Slice, Silver', 0.9999926]\n",
+      "['Black and Decker HS900 Flavor Steamer Rice Cooker Plus', 0.9999871]\n",
+      "['Zojirushi NS-LHC05XT Micom Rice Cooker & Warmer, Stainless Dark Brown', 0.9999801]\n"
      ]
     }
    ],
    "source": [
-    "Product_recommender('B00004S4TZ')"
+    "Product_recommender('B00004S576')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1585,20 +1585,20 @@
      "output_type": "stream",
      "text": [
       "Your item's most prominant topic is:\n",
-      "0.024*\"coffee\" + 0.012*\"bowl\" + 0.009*\"container\" + 0.007*\"drink\" + 0.007*\"cup\" + 0.007*\"food\" + 0.0...\n",
+      "0.026*\"curtain\" + 0.019*\"shower\" + 0.015*\"bathroom\" + 0.011*\"board\" + 0.009*\"window\" + 0.009*\"spoon\"...\n",
       "-----\n",
-      "Recommendations for : Hamilton Beach 52204 Blen...\n",
+      "Recommendations for : Cuisipro Stainless Steel Measuring Spoon Set...\n",
       "************************************************\n",
-      "[\"Chef'sChoice 7975001 Chef's Choice Premium Metal Food Grinder Attachment Model 796 Designed for KitchenAid Stand Mixers, 3 Piece Set, Silver\", 1.0]\n",
-      "['MOULIN TC 320 Wet & Dry Chutney Grinder, White', 1.0]\n",
-      "['Chef U Stainless Steel Mixing Bowl Set with Lids - With Bright Color Silicone Rubber Bottom - Measurement Mark & Nesting - Set of 3 Bowls - Dishwasher & Freezer Safe', 0.99999976]\n",
-      "['Hamilton Beach Commercial Blender Cutter Blade', 0.9999997]\n",
-      "['Zak Designs 0668-3470 Moso 4-inch Bamboo Individual Bowls, Gray, 12-piece set', 0.9999993]\n"
+      "['Dexas Cut and Serve Cutting Board, 13 by 18-Inch, White and Black', 0.9999567]\n",
+      "['Guzzini My Kitchen Silverware Drainer Caddy, 5-Inches, Apple Green', 0.9999232]\n",
+      "[\"Naturally Med Olive Wood Mustard/Sugar/Salt Spoon, 5'' L\", 0.99969393]\n",
+      "['Norpro 3063 8-Piece Stainless Steel Measuring Spoon Set', 0.99966466]\n",
+      "['Measuring Spoons, Wuudi 304 Stainless Steel Measuring Spoons set of 8 with Egg Whisk and Measuring Ruler (as gift) for Measuring Liquid and Dry Ingredients', 0.9994914]\n"
      ]
     }
    ],
    "source": [
-    "Product_recommender('B00004RDAZ')"
+    "Product_recommender('B00004SU1I')"
    ]
   },
   {
