LDA Mallet, Topic Visualizations, Sentiment analysis on Topics

--- a/Topic Modelling and Sentiment Analysis/Amazon_Reviews_LDAMallet_TopicDistribution.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Amazon_Reviews_LDAMallet_TopicDistribution.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dominant Topic and it distrubution on each sentence"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1351,6 +1358,15 @@
     "fig.tight_layout(w_pad=2)    \n",
     "fig.suptitle('Word Count and Importance of Topic Keywords', fontsize=22, y=1.05)    \n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference Links\n",
+    "https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/#18dominanttopicineachsentence <br>\n",
+    "https://www.machinelearningplus.com/nlp/topic-modeling-visualization-how-to-present-results-lda-models/"
    ]
   },
   {
