--- a/Topic Modelling and Sentiment Analysis/Amazon_Reviews_LDAMallet.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Amazon_Reviews_LDAMallet.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "(188138, 2)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "(192603, 4)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "(2, 4)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "1286077"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "4  Very cool sticker book. You can stick, remove,...      5  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "73536   I love these sheets.  They are so soft and coz...   3725  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "(5, 4)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "(25, 4)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "24  Nice quality trash can. Great silent closing l...   2619  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_req.to_csv(\"/Users/harika_pradeep/Downloads/top_25.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +932,7 @@
        "(300677, 2)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1002,13 +1011,22 @@
        "4  B00FLYWNYQ   There was only quiet musical beeping when ope..."
       ]
      },
-     "execution_count": 117,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_sentences.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sentences.to_csv(\"/Users/harika_pradeep/Downloads/top_25_sents.csv\")"
    ]
   },
   {
@@ -2053,6 +2071,17 @@
    "outputs": [],
    "source": [
     "ldamallet.save('ldamallet.lda')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference Links:\n",
+    "https://blog.insightdatascience.com/topic-modeling-and-sentiment-analysis-to-pinpoint-the-perfect-doctor-6a8fdd4a3904 <br>\n",
+    "https://towardsdatascience.com/end-to-end-topic-modeling-in-python-latent-dirichlet-allocation-lda-35ce4ed6b3e0 <br>\n",
+    "https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/#18dominanttopicineachsentence <br>\n",
+    "https://kldavenport.com/topic-modeling-amazon-reviews/#what-can-we-do-with-this-in-production"
    ]
   },
   {
